seaqt/QtWidgets/gen_qwizard.h

typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWizard QWizard;
typedef struct QWizardPage QWizardPage;
void QWizard_connect_currentIdChanged(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_connect_helpRequested(QWizard* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QWizard_connect_customButtonClicked(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_connect_pageAdded(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QWizard_connect_pageRemoved(QWizard* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
typedef struct VirtualQWizardPage VirtualQWizardPage;
void QWizardPage_connect_completeChanged(QWizardPage* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
QMetaObject* QWizardPage_virtualbase_metaObject(const VirtualQWizardPage* self);
void* QWizardPage_virtualbase_metacast(VirtualQWizardPage* self, const char* param1);
int QWizardPage_virtualbase_metacall(VirtualQWizardPage* self, int param1, int param2, void** param3);
void QWizardPage_virtualbase_initializePage(VirtualQWizardPage* self);
void QWizardPage_virtualbase_cleanupPage(VirtualQWizardPage* self);
bool QWizardPage_virtualbase_validatePage(VirtualQWizardPage* self);
bool QWizardPage_virtualbase_isComplete(const VirtualQWizardPage* self);
int QWizardPage_virtualbase_nextId(const VirtualQWizardPage* self);
int QWizardPage_virtualbase_devType(const VirtualQWizardPage* self);
void QWizardPage_virtualbase_setVisible(VirtualQWizardPage* self, bool visible);
QSize* QWizardPage_virtualbase_sizeHint(const VirtualQWizardPage* self);
QSize* QWizardPage_virtualbase_minimumSizeHint(const VirtualQWizardPage* self);
int QWizardPage_virtualbase_heightForWidth(const VirtualQWizardPage* self, int param1);
bool QWizardPage_virtualbase_hasHeightForWidth(const VirtualQWizardPage* self);
QPaintEngine* QWizardPage_virtualbase_paintEngine(const VirtualQWizardPage* self);
bool QWizardPage_virtualbase_event(VirtualQWizardPage* self, QEvent* event);
void QWizardPage_virtualbase_mousePressEvent(VirtualQWizardPage* self, QMouseEvent* event);
void QWizardPage_virtualbase_mouseReleaseEvent(VirtualQWizardPage* self, QMouseEvent* event);
void QWizardPage_virtualbase_mouseDoubleClickEvent(VirtualQWizardPage* self, QMouseEvent* event);
void QWizardPage_virtualbase_mouseMoveEvent(VirtualQWizardPage* self, QMouseEvent* event);
void QWizardPage_virtualbase_wheelEvent(VirtualQWizardPage* self, QWheelEvent* event);
void QWizardPage_virtualbase_keyPressEvent(VirtualQWizardPage* self, QKeyEvent* event);
void QWizardPage_virtualbase_keyReleaseEvent(VirtualQWizardPage* self, QKeyEvent* event);
void QWizardPage_virtualbase_focusInEvent(VirtualQWizardPage* self, QFocusEvent* event);
void QWizardPage_virtualbase_focusOutEvent(VirtualQWizardPage* self, QFocusEvent* event);
void QWizardPage_virtualbase_enterEvent(VirtualQWizardPage* self, QEnterEvent* event);
void QWizardPage_virtualbase_leaveEvent(VirtualQWizardPage* self, QEvent* event);
void QWizardPage_virtualbase_paintEvent(VirtualQWizardPage* self, QPaintEvent* event);
void QWizardPage_virtualbase_moveEvent(VirtualQWizardPage* self, QMoveEvent* event);
void QWizardPage_virtualbase_resizeEvent(VirtualQWizardPage* self, QResizeEvent* event);
void QWizardPage_virtualbase_closeEvent(VirtualQWizardPage* self, QCloseEvent* event);
void QWizardPage_virtualbase_contextMenuEvent(VirtualQWizardPage* self, QContextMenuEvent* event);
void QWizardPage_virtualbase_tabletEvent(VirtualQWizardPage* self, QTabletEvent* event);
void QWizardPage_virtualbase_actionEvent(VirtualQWizardPage* self, QActionEvent* event);
void QWizardPage_virtualbase_dragEnterEvent(VirtualQWizardPage* self, QDragEnterEvent* event);
void QWizardPage_virtualbase_dragMoveEvent(VirtualQWizardPage* self, QDragMoveEvent* event);
void QWizardPage_virtualbase_dragLeaveEvent(VirtualQWizardPage* self, QDragLeaveEvent* event);
void QWizardPage_virtualbase_dropEvent(VirtualQWizardPage* self, QDropEvent* event);
void QWizardPage_virtualbase_showEvent(VirtualQWizardPage* self, QShowEvent* event);
void QWizardPage_virtualbase_hideEvent(VirtualQWizardPage* self, QHideEvent* event);
bool QWizardPage_virtualbase_nativeEvent(VirtualQWizardPage* self, struct miqt_string eventType, void* message, intptr_t* result);
void QWizardPage_virtualbase_changeEvent(VirtualQWizardPage* self, QEvent* param1);
int QWizardPage_virtualbase_metric(const VirtualQWizardPage* self, int param1);
void QWizardPage_virtualbase_initPainter(const VirtualQWizardPage* self, QPainter* painter);
QPaintDevice* QWizardPage_virtualbase_redirected(const VirtualQWizardPage* self, QPoint* offset);
QPainter* QWizardPage_virtualbase_sharedPainter(const VirtualQWizardPage* self);
void QWizardPage_virtualbase_inputMethodEvent(VirtualQWizardPage* self, QInputMethodEvent* param1);
QVariant* QWizardPage_virtualbase_inputMethodQuery(const VirtualQWizardPage* self, int param1);
bool QWizardPage_virtualbase_focusNextPrevChild(VirtualQWizardPage* self, bool next);
bool QWizardPage_virtualbase_eventFilter(VirtualQWizardPage* self, QObject* watched, QEvent* event);
void QWizardPage_virtualbase_timerEvent(VirtualQWizardPage* self, QTimerEvent* event);
void QWizardPage_virtualbase_childEvent(VirtualQWizardPage* self, QChildEvent* event);
void QWizardPage_virtualbase_customEvent(VirtualQWizardPage* self, QEvent* event);
void QWizardPage_virtualbase_connectNotify(VirtualQWizardPage* self, QMetaMethod* signal);
void QWizardPage_virtualbase_disconnectNotify(VirtualQWizardPage* self, QMetaMethod* signal);