seaqt/QtWidgets/gen_qwizard.nim

  isComplete*: proc(vtbl, self: pointer, ): bool {.cdecl, raises: [], gcsafe.}
  nextId*: proc(vtbl, self: pointer, ): cint {.cdecl, raises: [], gcsafe.}
  devType*: proc(vtbl, self: pointer, ): cint {.cdecl, raises: [], gcsafe.}
  setVisible*: proc(vtbl, self: pointer, visible: bool): void {.cdecl, raises: [], gcsafe.}
  sizeHint*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  minimumSizeHint*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  heightForWidth*: proc(vtbl, self: pointer, param1: cint): cint {.cdecl, raises: [], gcsafe.}
  hasHeightForWidth*: proc(vtbl, self: pointer, ): bool {.cdecl, raises: [], gcsafe.}
  paintEngine*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  event*: proc(vtbl, self: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  mousePressEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseReleaseEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseDoubleClickEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseMoveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  wheelEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  keyPressEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  keyReleaseEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  focusInEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  focusOutEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  enterEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  leaveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  paintEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  moveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  resizeEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  closeEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  contextMenuEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  tabletEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  actionEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dragEnterEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dragMoveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dragLeaveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  dropEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  showEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  hideEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  nativeEvent*: proc(vtbl, self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool {.cdecl, raises: [], gcsafe.}
  changeEvent*: proc(vtbl, self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  metric*: proc(vtbl, self: pointer, param1: cint): cint {.cdecl, raises: [], gcsafe.}
  initPainter*: proc(vtbl, self: pointer, painter: pointer): void {.cdecl, raises: [], gcsafe.}
  redirected*: proc(vtbl, self: pointer, offset: pointer): pointer {.cdecl, raises: [], gcsafe.}
  sharedPainter*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  inputMethodEvent*: proc(vtbl, self: pointer, param1: pointer): void {.cdecl, raises: [], gcsafe.}
  inputMethodQuery*: proc(vtbl, self: pointer, param1: cint): pointer {.cdecl, raises: [], gcsafe.}
  focusNextPrevChild*: proc(vtbl, self: pointer, next: bool): bool {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(vtbl, self: pointer, watched: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  timerEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQWizardPage_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QWizardPage_virtualbase_metaObject".}
proc fcQWizardPage_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QWizardPage_virtualbase_metacast".}
proc fcQWizardPage_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWizardPage_virtualbase_metacall".}
proc fcQWizardPage_virtualbase_initializePage(self: pointer, ): void {.importc: "QWizardPage_virtualbase_initializePage".}
proc fcQWizardPage_virtualbase_cleanupPage(self: pointer, ): void {.importc: "QWizardPage_virtualbase_cleanupPage".}
proc fcQWizardPage_virtualbase_validatePage(self: pointer, ): bool {.importc: "QWizardPage_virtualbase_validatePage".}
proc fcQWizardPage_virtualbase_isComplete(self: pointer, ): bool {.importc: "QWizardPage_virtualbase_isComplete".}
proc fcQWizardPage_virtualbase_nextId(self: pointer, ): cint {.importc: "QWizardPage_virtualbase_nextId".}
proc fcQWizardPage_virtualbase_devType(self: pointer, ): cint {.importc: "QWizardPage_virtualbase_devType".}
proc fcQWizardPage_virtualbase_setVisible(self: pointer, visible: bool): void {.importc: "QWizardPage_virtualbase_setVisible".}
proc fcQWizardPage_virtualbase_sizeHint(self: pointer, ): pointer {.importc: "QWizardPage_virtualbase_sizeHint".}
proc fcQWizardPage_virtualbase_minimumSizeHint(self: pointer, ): pointer {.importc: "QWizardPage_virtualbase_minimumSizeHint".}
proc fcQWizardPage_virtualbase_heightForWidth(self: pointer, param1: cint): cint {.importc: "QWizardPage_virtualbase_heightForWidth".}
proc fcQWizardPage_virtualbase_hasHeightForWidth(self: pointer, ): bool {.importc: "QWizardPage_virtualbase_hasHeightForWidth".}
proc fcQWizardPage_virtualbase_paintEngine(self: pointer, ): pointer {.importc: "QWizardPage_virtualbase_paintEngine".}
proc fcQWizardPage_virtualbase_event(self: pointer, event: pointer): bool {.importc: "QWizardPage_virtualbase_event".}
proc fcQWizardPage_virtualbase_mousePressEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_mousePressEvent".}
proc fcQWizardPage_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_mouseReleaseEvent".}
proc fcQWizardPage_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_mouseDoubleClickEvent".}
proc fcQWizardPage_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_mouseMoveEvent".}
proc fcQWizardPage_virtualbase_wheelEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_wheelEvent".}
proc fcQWizardPage_virtualbase_keyPressEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_keyPressEvent".}
proc fcQWizardPage_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_keyReleaseEvent".}
proc fcQWizardPage_virtualbase_focusInEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_focusInEvent".}
proc fcQWizardPage_virtualbase_focusOutEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_focusOutEvent".}
proc fcQWizardPage_virtualbase_enterEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_enterEvent".}
proc fcQWizardPage_virtualbase_leaveEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_leaveEvent".}
proc fcQWizardPage_virtualbase_paintEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_paintEvent".}
proc fcQWizardPage_virtualbase_moveEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_moveEvent".}
proc fcQWizardPage_virtualbase_resizeEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_resizeEvent".}
proc fcQWizardPage_virtualbase_closeEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_closeEvent".}
proc fcQWizardPage_virtualbase_contextMenuEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_contextMenuEvent".}
proc fcQWizardPage_virtualbase_tabletEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_tabletEvent".}
proc fcQWizardPage_virtualbase_actionEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_actionEvent".}
proc fcQWizardPage_virtualbase_dragEnterEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_dragEnterEvent".}
proc fcQWizardPage_virtualbase_dragMoveEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_dragMoveEvent".}
proc fcQWizardPage_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_dragLeaveEvent".}
proc fcQWizardPage_virtualbase_dropEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_dropEvent".}
proc fcQWizardPage_virtualbase_showEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_showEvent".}
proc fcQWizardPage_virtualbase_hideEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_hideEvent".}
proc fcQWizardPage_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool {.importc: "QWizardPage_virtualbase_nativeEvent".}
proc fcQWizardPage_virtualbase_changeEvent(self: pointer, param1: pointer): void {.importc: "QWizardPage_virtualbase_changeEvent".}
proc fcQWizardPage_virtualbase_metric(self: pointer, param1: cint): cint {.importc: "QWizardPage_virtualbase_metric".}
proc fcQWizardPage_virtualbase_initPainter(self: pointer, painter: pointer): void {.importc: "QWizardPage_virtualbase_initPainter".}
proc fcQWizardPage_virtualbase_redirected(self: pointer, offset: pointer): pointer {.importc: "QWizardPage_virtualbase_redirected".}
proc fcQWizardPage_virtualbase_sharedPainter(self: pointer, ): pointer {.importc: "QWizardPage_virtualbase_sharedPainter".}
proc fcQWizardPage_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void {.importc: "QWizardPage_virtualbase_inputMethodEvent".}
proc fcQWizardPage_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer {.importc: "QWizardPage_virtualbase_inputMethodQuery".}
proc fcQWizardPage_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool {.importc: "QWizardPage_virtualbase_focusNextPrevChild".}
proc fcQWizardPage_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QWizardPage_virtualbase_eventFilter".}
proc fcQWizardPage_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_timerEvent".}
proc fcQWizardPage_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_childEvent".}
proc fcQWizardPage_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QWizardPage_virtualbase_customEvent".}
proc fcQWizardPage_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QWizardPage_virtualbase_connectNotify".}
proc fcQWizardPage_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QWizardPage_virtualbase_disconnectNotify".}
